# tkinter-calculator

./: calculator_class.py  calculator_factories.py  main.py  pyproject.toml  setup.py
calculadora/: calculator_class.py  calculator_factories.py  main.py
