[tool.poetry]
name = "calculadora"
version = "0.1.1"
description = ""
authors = ["AlanSouza-19 <souzaalanc75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
calculator = 'calculadora.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
